--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silly Story Generator</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Life Story Generator</title>
 </head>
 <body>
-    <div id="silly-story-container"></div>
-    <button id="generate-btn">Generate Silly Story</button>
+    <header>
+        <h1>Life Story Generator</h1>
+    </header>
+    <div id="life-story-container"></div>
+    <button id="generate-btn">Generate Life Story</button>
 
     <script src="script.js"></script>
 </body>
