--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Life Story Generator</title>
+    <title>Personal Story Generator</title>
 </head>
 <body>
     <header>
-        <h1>Life Story Generator</h1>
+        <h1>Personal Story Generator</h1>
     </header>
-    <div id="life-story-container"></div>
-    <button id="generate-btn">Generate Life Story</button>
+    <label for="name-input">Enter your name: </label>
+    <input type="text" id="name-input">
+    <button id="generate-btn">Generate Personal Story</button>
+    <div id="personal-story-container"></div>
 
     <script src="script.js"></script>
 </body>
