--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Personal Story Generator</h1>
+        <h1>Story Generator</h1>
     </header>
     <label for="name-input">Enter your name: </label>
     <input type="text" id="name-input">
-    <button id="generate-btn">Generate Personal Story</button>
+    <button id="generate-btn">Generate Story</button>
     <div id="personal-story-container"></div>
 
     <script src="script.js"></script>
