--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Story Generator</title>
+    <title>Story Generator</title>
     <style>
         body {
             margin: 0;
@@ -62,11 +62,12 @@
 </head>
 <body>
     <header>
-        <h1>Personal Story Generator</h1>
+        <h1>Story Generator</h1>
     </header>
     <label for="name-input">Enter your name: </label>
-    <input type="text" id="name-input">
-    <button id="generate-btn">Generate Personal Story</button>
+    <input type="text" id="name-input" placeholder="Enter name">
+
+    <button id="generate-btn">Generate Story</button>
     <div id="personal-story-container"></div>
 
     <script src="script.js"></script>
