--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <button class="randomize">Generate random story</button>
       </div>
       <p class="story"></p>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
